[gd_scene load_steps=2 format=2]

[ext_resource path="res://utils/keybinding_option.gd" type="Script" id=2]

[node name="KeybindingOption" type="HBoxContainer"]
anchor_right = 1.0
anchor_bottom = 0.09
margin_bottom = -2.0
rect_min_size = Vector2( 408, 54 )
script = ExtResource( 2 )
action_name = "fire"

[node name="Label" type="Label" parent="."]
margin_top = 20.0
margin_right = 340.0
margin_bottom = 34.0
size_flags_horizontal = 3
text = "Action: "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_left = 344.0
margin_right = 1024.0
margin_bottom = 54.0
size_flags_horizontal = 11
size_flags_stretch_ratio = 2.0
custom_constants/separation = 30
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainKey" type="Button" parent="HBoxContainer"]
margin_right = 325.0
margin_bottom = 54.0
size_flags_horizontal = 3
text = "K"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SecondaryKey" type="Button" parent="HBoxContainer"]
margin_left = 355.0
margin_right = 680.0
margin_bottom = 54.0
size_flags_horizontal = 3
text = "[ Unset ]"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PressAKey" type="Label" parent="HBoxContainer"]
visible = false
margin_top = 1.0
margin_right = 680.0
margin_bottom = 53.0
size_flags_horizontal = 3
text = "Press a key"
align = 1
valign = 1

[connection signal="pressed" from="HBoxContainer/MainKey" to="." method="_on_MainKey_pressed"]
[connection signal="pressed" from="HBoxContainer/SecondaryKey" to="." method="_on_SecondaryKey_pressed"]
